# CircuitTrace

./: .gitignore  AGENTS.md  README.md  build_release.sh  rewrite_app.py
backend/: CircuitTrace.spec  a.out  probe_pyverilog.py  probe_slang.py  pyproject.toml  test_integration.py  test_native.py
backend/src/: api.py  desktop_app.py  hierarchy.py  project_manager.py  test_get_data.py  test_hierarchy.py  tracer.py  waveform.py
backend/tests/fixtures/large_project/: alu.v  apb_bus.v  cpu.v  cpu_core.v  decode.v  decode_unit.v  execute.v  fetch.v  fix_files.py  gen_soc.py  memory_ctrl.v  project.f  soc_top.v  tb.v  timer.v  uart.v
frontend/: index.html  package-lock.json  package.json  test_match.js
frontend/public/surfer/: index.html  integration.js  surfer.d.ts  surfer.js
frontend/src/: App.css  App.jsx  GetSignalsDialog.jsx  WaveformCanvas.jsx
