[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.137.1",
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "pyinstaller>=6.21.0",
    "pyslang>=11.0.0",
    "pytest>=9.1.0",
    "pyverilog>=1.3.0",
    "pywebview>=6.2.1",
    "uvicorn>=0.49.0",
    "vcdvcd>=2.6.0",
]
